--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box; }
 
+body {
+  font-family: sans-serif;
+  font-size: 14px; }
+
 .wrapper {
   background: whitesmoke;
   height: 100%;
